--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body {
   margin: 0 auto;
 }
 
+
 #question {
   height: 100px;
   display: flex;
@@ -182,6 +183,28 @@ button {
   width: 100%;
   position: fixed;
   top: 0;
+}
+
+/* Blog page */
+#blog-page {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#blog-page a {
+  color: #9dffad;
+  margin: 10px 0;
+}
+
+.blog {
+  border: 2px solid #9dffad;
+  border-radius: 10px;
+  color: aliceblue;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(92.49deg,
+      rgba(255, 255, 255, 0.1) 0.18%,
+      rgba(255, 255, 255, 0.05) 99.85%);
+  backdrop-filter: blur(5px);
 }
 
 /* small device */
