--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,10 @@ button {
   backdrop-filter: blur(5px);
 }
 
+footer {
+  background-color: black;
+  height: 200px;
+}
 
 /* small device */
 @media only screen and (max-width: 700px) {
